# CRUD-rust-thisisabook

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
scripts/: seed.py
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  routes.rs
